--- a/view/csv-import/index/index.phtml
+++ b/view/csv-import/index/index.phtml
@@ -1,1 +1,16 @@
 <?php
+$form->prepare();
+$escapeHtml = $this->plugin('escapeHtml');
+
+?>
+
+<?php echo $this->pageTitle($this->translate('Import · CSV Import')); ?>
+
+
+<?php echo $this->form()->openTag($form); ?>
+<fieldset id='page-actions'>
+    <input type='submit' value='Next' />
+</fieldset>
+<?php echo $this->formCollection($form, false); ?>
+
+<?php echo $this->form()->closeTag($form); ?>
