--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -1,20 +1,42 @@
 <?php
-//$form->prepare();
+$form->prepare();
 $escapeHtml = $this->plugin('escapeHtml');
 $this->headScript()->appendFile($this->assetUrl('js/csvimport.js', 'CSVImport'));
-//$this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImport'));
+$this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImport'));
 $this->htmlElement('body')->appendAttribute('class', 'sidebar-open');
 ?>
 
 <?php echo $this->pageTitle($this->translate('Map Elements · CSV Import')); ?>
-<?php //echo $this->form()->openTag($form); ?>
+<?php echo $this->form()->openTag($form); ?>
 <div id='mapping-data'>
-
+    <fieldset id="csv-import-elements-map-fieldset">
+        <table>
+            <thead>
+                <tr>
+                    <th><?php echo $this->translate("Csv Heading"); ?></th>
+                    <th><?php echo $this->translate("Mapped Properties"); ?></th>
+                    <th><?php echo $this->translate("File"); ?></th>
+                </tr>
+            </thead>
+            <tbody>
+            <?php foreach ($columns as $index=>$column): ?>
+                <tr class="element mappable" data-element-id="<?php echo $index; ?>">
+                    <td><?php echo $column;?></td>
+                    <td class="mapping element">
+                        <ul class="mappings elements">
+                        </ul>
+                    </td>
+                    <td>
+                        <input type="checkbox" name="file[<?php echo $index; ?>]"></input>
+                    </td>
+                </tr>
+                <?php endforeach; ?>
+            </tbody>
+        </table>
+    </fieldset>
 </div>
-<?php //echo $this->form()->closeTag($form); ?>
+<?php echo $this->form()->closeTag($form); ?>
 
 <?php
-echo $this->resourceClassSelector('Select class to map. Click an Omeka 2 item type as the target, then select the resource class for it. Omeka S items can have only one resource class.', true);    
-echo $this->propertySelector('Select property to map. Click an Omeka 2 element as the target, then select the properties for it.', true);
-    
+echo $this->propertySelector('Select property to map. Click a column heading as the target, then select the properties for it.', true);
 ?>
