--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -8,6 +8,10 @@ $this->htmlElement('body')->appendAttribute('class', 'sidebar-open');
 
 <?php echo $this->pageTitle($this->translate('Map Elements · CSV Import')); ?>
 <?php echo $this->form()->openTag($form); ?>
+<fieldset id='page-actions'>
+    <input type='submit' value='Next' />
+</fieldset>
+<input type='hidden' name='csvpath' value='<?php echo $csvpath; ?>' />
 <div id='mapping-data'>
     <fieldset id="csv-import-elements-map-fieldset">
         <table>
