--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -31,7 +31,7 @@ $this->htmlElement('body')->appendAttribute('class', 'sidebar-open');
                         </ul>
                     </td>
                     <td>
-                        <input type="checkbox" name="file[<?php echo $index; ?>]"></input>
+                        <input type="checkbox" name="column-file[<?php echo $index; ?>]"></input>
                     </td>
                 </tr>
                 <?php endforeach; ?>
