--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -20,6 +20,7 @@ $this->htmlElement('body')->appendAttribute('class', 'sidebar-open');
                     <th><?php echo $this->translate("Csv Heading"); ?></th>
                     <th><?php echo $this->translate("Mapped Properties"); ?></th>
                     <th><?php echo $this->translate("Uri"); ?></th>
+                    <th><?php echo $this->translate("Multiple Values"); ?></th>
                     <th><?php echo $this->translate("File"); ?></th>
                 </tr>
             </thead>
@@ -33,6 +34,9 @@ $this->htmlElement('body')->appendAttribute('class', 'sidebar-open');
                     </td>
                     <td>
                         <input type="checkbox" name="column-uri[<?php echo $index; ?>]"></input>
+                    </td>
+                    <td>
+                        <input type="checkbox" name="column-multivalue[<?php echo $index; ?>]"></input>
                     </td>
                     <td>
                         <input type="checkbox" name="column-file[<?php echo $index; ?>]"></input>
