make media import options match the item media buttons

--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -79,24 +79,19 @@ echo $this->propertySelector('Select property to map. Click a column heading as 
     <p>Media Importing (eventually auto-built)</p>
     <ul>
         <li data-flag='column-file' data-flag-type='media'>
-            <div class='description'>Data in this column gives URLs to files to import.</div>
-            <span>File URL</span>
+            <a href='#' class='button'>File URL</a>
         </li>
         <li data-flag='column-oembed' data-flag-type='media'>
-            <div class='description'>Data in this column gives URLs to oEmbed sources.</div>
-            <span>oEmbed</span>
+            <a href='#' class='button'>oEmbed</a>
         </li>
         <li data-flag='column-youtube' data-flag-type='media'>
-            <div class='description'>Data in this column gives URLs to YouTube Videos</div>
-            <span>YouTube</span>
+            <a href='#' class='button'>YouTube</a>
         </li>
         <li data-flag='column-html' data-flag-type='media'>
-            <div class='description'>Data in this column gives HTML.</div>
-            <span>HTML</span>
+            <a href='#' class='button'>HTML</a>
         </li>
         <li data-flag='column-iiif' data-flag-type='media'>
-            <div class='description'>Data in this column gives URLs to IIIF image.</div>
-            <span>IIIF Image</span>
+            <a href='#' class='button'>IIIF Image</a>
         </li>
     </ul>
 
