--- a/asset/css/csvimport.css
+++ b/asset/css/csvimport.css
@@ -27,11 +27,7 @@ tr.mappable td:first-child {
     max-width: 40%;
 }
 
-tr.mappable td:nth-child(2) {
-    width: 30%;
-}
-
-ul.mappings {
+ul {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -39,4 +35,8 @@ ul.mappings {
 
 li.mapping {
     margin: 3px;
+}
+
+.sidebar a.button {
+    width: 100%
 }
