--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -76,23 +76,15 @@ echo $this->propertySelector('Select property to map. Click a column heading as 
 </div>
 
 <div id='media-sidebar' class='sidebar'>
-    <p>Media Importing (eventually auto-built)</p>
+    <legend>Media Importing (eventually auto-built)</legend>
     <ul>
-        <li data-flag='column-file' data-flag-type='media'>
-            <a href='#' class='button'>File URL</a>
+        <?php foreach($mediaForms as $type=>$mediaForm): ?>
+        <?php if ($type !='upload'): ?>
+        <li data-flag='column-<?php echo $escapeHtml($type); ?>' data-flag-type='media'>
+            <a href='#' class='button'><span><?php echo $escapeHtml($mediaForm['label']); ?></span></a>
         </li>
-        <li data-flag='column-oembed' data-flag-type='media'>
-            <a href='#' class='button'>oEmbed</a>
-        </li>
-        <li data-flag='column-youtube' data-flag-type='media'>
-            <a href='#' class='button'>YouTube</a>
-        </li>
-        <li data-flag='column-html' data-flag-type='media'>
-            <a href='#' class='button'>HTML</a>
-        </li>
-        <li data-flag='column-iiif' data-flag-type='media'>
-            <a href='#' class='button'>IIIF Image</a>
-        </li>
+        <?php endif; ?>
+        <?php endforeach; ?>
     </ul>
 
 </div>
