move flags to direct checkboxes

--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -39,12 +39,13 @@ $this->htmlElement('body')->appendAttribute('class', 'sidebar-open');
                 <tr class="element mappable" data-element-id="<?php echo $index; ?>">
                     <td>
                         <h3><?php echo $column;?></h3>
-<ul class='sidebar-chooser'>
-<li><a href='#' class='button' data-sidebar='property-selector'>Map Properties</a></li>
-<li><a href='#' class='button' data-sidebar='media-sidebar'>Media Import</a></li>
-<li><a href='#' class='button' data-sidebar='flags-sidebar'>Set Flags</a></li>
-<li><a href='#' class='button' data-sidebar='fake-module-sidebar'>(Module 1 stuff)</a></li>
-</ul>
+                        <input type='checkbox' name='column-url[<?php echo $index; ?>]'></input><label>URL</label>
+                        <input type='checkbox' name='column-multivalue[<?php echo $index; ?>]'></input><label>Multivalue</label>
+                        <ul class='sidebar-chooser'>
+                            <li><a href='#' class='button' data-sidebar='property-selector'>Map Properties</a></li>
+                            <li><a href='#' class='button' data-sidebar='media-sidebar'>Media Import</a></li>
+                            <li><a href='#' class='button' data-sidebar='fake-module-sidebar'>(Module 1 stuff)</a></li>
+                        </ul>
                     </td>
                     <td class="mapping element">
                         <ul class="mappings elements">
@@ -62,21 +63,8 @@ $this->htmlElement('body')->appendAttribute('class', 'sidebar-open');
 echo $this->propertySelector('Select property to map. Click a column heading as the target, then select the properties for it.', true);
 ?>
 
-<div id='flags-sidebar' class='flags sidebar'>
-    <ul>
-        <li data-flag='column-url'>
-            <div class='description'>Import this data as a URL value type.</div>
-            <span>URL</span>
-        </li>
-        <li data-flag='column-multivalue'>
-            <div class='description'>This column contains multiple values for a property. Double-check the separator for multiple values.</div>
-            <span>Multiple Values</span>
-        </li>
-    </ul>
-</div>
-
 <div id='media-sidebar' class='sidebar'>
-    <legend>Media Importing (eventually auto-built)</legend>
+    <legend>Media Importing</legend>
     <ul>
         <?php foreach($mediaForms as $type=>$mediaForm): ?>
         <?php if ($type !='upload'): ?>
