movement toward a little more generalization for row-by-row item options

--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -44,6 +44,7 @@ $this->htmlElement('body')->appendAttribute('class', 'sidebar-open');
                         <ul class='sidebar-chooser'>
                             <li><a href='#' class='button' data-sidebar='property-selector'>Map Properties</a></li>
                             <li><a href='#' class='button' data-sidebar='media-sidebar'>Media Import</a></li>
+                            <li><a href='#' class='button' data-sidebar='item-sidebar'>Item Data</a></li>
                             <li><a href='#' class='button' data-sidebar='fake-module-sidebar'>(Module 1 stuff)</a></li>
                         </ul>
                     </td>
@@ -63,7 +64,27 @@ $this->htmlElement('body')->appendAttribute('class', 'sidebar-open');
 echo $this->propertySelector('Select property to map. Click a column heading as the target, then select the properties for it.', true);
 ?>
 
-<div id='media-sidebar' class='sidebar'>
+<div id='item-sidebar' class='sidebar flags'>
+    <p>Data from this column applies to the entire item being imported.</p>
+    <p>Settings here will override any corresponding settings in Basic Import Settings.</p>
+    <ul>
+        <li data-flag='column-itemset-id'>
+            <a href='#' class='button'><span>Item Set ID</span></a>
+        </li>
+        <li data-flag='column-resourcetemplate'>
+            <a href='#' class='button'><span>Resource Template Name</span></a>
+        </li>
+        <li data-flag='column-resourceclass'>
+            <a href='#' class='button'><span>Resource Class Term</span></a>
+        </li>
+        <li data-flag='column-owneremail'>
+            <a href='#' class='button'><span>Owner Email Address</span></a>
+        </li>
+    </ul>
+</div>
+
+
+<div id='media-sidebar' class='sidebar flags'>
     <legend>Media Importing</legend>
     <ul>
         <?php foreach($mediaForms as $type=>$mediaForm): ?>
