--- a/view/csv-import/index/past-imports.phtml
+++ b/view/csv-import/index/past-imports.phtml
@@ -1,1 +1,67 @@
 <?php
+$this->htmlElement('body')->appendAttribute('class', 'csvimporter jobs undo');
+$escape = $this->plugin('escapeHtml');
+?>
+
+<?php echo $this->pageTitle($this->translate('Past Imports · CSV Importer')); ?>
+<?php if(empty($imports)): ?>
+
+<?php else: ?>
+<?php echo $this->pagination(); ?>
+
+<form method='POST'>
+    <fieldset id='page-actions'>
+        <input type='submit' value='Submit' />
+    </fieldset>
+    <table>
+        <thead>
+            <tr>
+                <th><?php echo $escape($this->translate('Undo?'));?></th>
+                <th><?php echo $this->sortLink($this->translate('Job ID'), 'id');?></th>
+                <th><?php echo $escape($this->translate('Comment'));?></th>
+                <th><?php echo $escape($this->translate('Items'));?></th>
+                <th><?php echo $escape($this->translate('Date'));?></th>
+                <th><?php echo $escape($this->translate('Status'));?></th>
+                <th><?php echo $escape($this->translate('Owner'));?></th>
+            </tr>
+        </thead>
+        <tbody>
+        <?php foreach ($imports as $import): ?>
+        <?php $job = $import->job(); ?>
+        <?php $undoJob = $import->undoJob(); ?>
+        <tr class="<?php echo $undone ? 'undone' : ''; ?>" >
+            <td>
+                <?php if (! $undoJob): ?>
+                <input type='checkbox' name='jobs[]' value='<?php echo $job->id(); ?>' />
+                <?php endif; ?>
+            </td>
+            <td><?php echo $job->link($escape($job->id())); ?></td>
+            <td>
+                <?php echo $import->comment(); ?>
+            </td>
+            <td>
+                <?php echo $this->translate('Added: ') . $import->addedCount(); ?>
+            </td>
+            <td><?php echo $escape($this->i18n()->dateFormat($job->started())); ?></td>
+            <td>
+            <?php if ($undoJob) {
+                if ($undoJob->ended()) {
+                    $status = $this->translate('Undone') . ' ' . $escape($this->i18n()->dateFormat($undoJob->ended()));
+                } else {
+                    $status = $this->translate('Undo in progress');
+                }
+                
+                
+            } else {
+                $status = $job->status();
+            } 
+            ?>
+            <?php echo $status; ?>
+            </td>
+            <td><?php echo $this->hyperlink($job->owner()->name(), $this->url('admin/id', array('controller' => 'user', 'action' => 'show', 'id' => $job->owner()->id()))); ?></td>
+        </tr>
+        <?php endforeach; ?>
+        </tbody>
+    </table>
+</form>
+<?php endif; ?>
