store entity and import data for undo

--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -1,5 +1,8 @@
 <?php
-$form->prepare();
+if (isset($form)) {
+    $form->prepare();
+}
+
 $escapeHtml = $this->plugin('escapeHtml');
 $this->headScript()->appendFile($this->assetUrl('js/csvimport.js', 'CSVImport'));
 $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImport'));
