--- a/view/csv-import/index/past-imports.phtml
+++ b/view/csv-import/index/past-imports.phtml
@@ -19,7 +19,7 @@ $escape = $this->plugin('escapeHtml');
                 <th><?php echo $escape($this->translate('Undo?'));?></th>
                 <th><?php echo $this->sortLink($this->translate('Job ID'), 'id');?></th>
                 <th><?php echo $escape($this->translate('Comment'));?></th>
-                <th><?php echo $escape($this->translate('Items'));?></th>
+                <th><?php echo $escape($this->translate('Imported Content'));?></th>
                 <th><?php echo $escape($this->translate('Date'));?></th>
                 <th><?php echo $escape($this->translate('Status'));?></th>
                 <th><?php echo $escape($this->translate('Owner'));?></th>
@@ -40,7 +40,7 @@ $escape = $this->plugin('escapeHtml');
                 <?php echo $import->comment(); ?>
             </td>
             <td>
-                <?php echo $this->translate('Added: ') . $import->addedCount(); ?>
+                <?php echo $this->translate('Added: ') . $import->addedCount() . ' ' . $import->resourceType(); ?>
             </td>
             <td><?php echo $escape($this->i18n()->dateFormat($job->started())); ?></td>
             <td>
