--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -15,7 +15,7 @@ $this->htmlElement('body')->appendAttribute('class', 'sidebar-open');
 
 <?php echo $this->form()->openTag($form); ?>
 <fieldset id='page-actions'>
-    <input type='submit' value='Next' />
+    <input type='submit' value='Import' />
 </fieldset>
 <input type='hidden' name='csvpath' value='<?php echo $csvpath; ?>' />
 <input type='hidden' name='resource_type' value='<?php echo $resourceType; ?>' />
