--- a/view/csv-import/index/index.phtml
+++ b/view/csv-import/index/index.phtml
@@ -9,7 +9,7 @@ $escapeHtml = $this->plugin('escapeHtml');
 
 <?php echo $this->form()->openTag($form); ?>
 <fieldset id='page-actions'>
-    <input type='submit' value='Next' />
+    <button type="submit"><?php echo $this->translate('Next'); ?></button>
 </fieldset>
 <?php echo $this->formCollection($form, false); ?>
 
