--- a/view/csv-import/index/map.phtml
+++ b/view/csv-import/index/map.phtml
@@ -8,7 +8,7 @@ $this->headScript()->appendFile($this->assetUrl('js/csvimport.js', 'CSVImport'))
 $this->headLink()->appendStylesheet($this->assetUrl('css/csvimport.css', 'CSVImport'));
 ?>
 
-<?php echo $this->pageTitle($this->translate('Map Elements · CSV Import')); ?>
+<?php echo $this->pageTitle($this->translate('Map Elements · Csv Import')); ?>
 
 <?php if(isset($csvpath)): ?>
 
