--- a/view/csv-import/index/past-imports.phtml
+++ b/view/csv-import/index/past-imports.phtml
@@ -3,7 +3,7 @@ $this->htmlElement('body')->appendAttribute('class', 'csvimporter jobs undo');
 $escape = $this->plugin('escapeHtml');
 ?>
 
-<?php echo $this->pageTitle($this->translate('Past Imports · CSV Importer')); ?>
+<?php echo $this->pageTitle($this->translate('Past Imports · Csv Importer')); ?>
 <?php if(empty($imports)): ?>
 
 <?php else: ?>
