consistent capitalization the other way

--- a/view/csv-import/index/index.phtml
+++ b/view/csv-import/index/index.phtml
@@ -4,7 +4,7 @@ $escapeHtml = $this->plugin('escapeHtml');
 
 ?>
 
-<?php echo $this->pageTitle($this->translate('Import · Csv Import')); ?>
+<?php echo $this->pageTitle($this->translate('Import · CSV Import')); ?>
 
 
 <?php echo $this->form()->openTag($form); ?>
